# ANPR_Project

./: Cargo.toml  anpr.py  ipfs_utils.py  lib.rs  main.py  readme.md  requirements.txt
static/: script.js  styles.css
templates/: base.html  dashboard.html  login.html  register.html  upload.html  vehicles.html
